[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.1.0"
name = "source-logos-blockchain"
description = "Source implementation for Logos Block explorer."
authors = [ "Nikolay <nikolay@status.im>",]
license = "MIT"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/sources/etherscan"
homepage = "https://airbyte.com"
repository = "https://github.com/status-im/airbyte-custom-connector"
packages = [ { include = "source_logos_blockchain" }, {include = "main.py" } ]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
airbyte-cdk = "^0"

[tool.poetry.scripts]
source-etherscan = "source_logos_blockchain.run:run"

[tool.poetry.group.dev.dependencies]
requests-mock = "*"
pytest-mock = "*"
pytest = "*"

